kubernetes/argocd/apps/workloads/immich/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: immich
  namespace: immich
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    external-dns.alpha.kubernetes.io/hostname: immich.paulynomial.com
    traefik.ingress.kubernetes.io/router.middlewares: traefik-default-redirect-https@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: immich.paulynomial.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: immich-server
                port:
                  name: http
