kubernetes/argocd/apps/workloads/immich/manifests/tailscale-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: immich-tailscale
  namespace: immich
  annotations:
    tailscale.com/hostname: "immich"
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: immich-server
      port:
        number: 2283
  tls:
    - hosts:
        - immich
